--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+a {
+    text-decoration: none;
+}
 *,
 *::before,
 *::after {
@@ -96,7 +99,7 @@ body {
     padding: 70px;
 }
     .profile-actions {
-        display: grid;
+        display : grid;
         grid-template-rows: repeat(2, max-content) auto;
         gap: 10px;
         margin-top: 30px;
@@ -143,7 +146,7 @@ body {
     }
         .data {
             grid-area: 1/1/2/3;
-            display: flex;
+            display:flex;
             flex-direction: column;
             justify-content: space-between;
             color: var(--secondary-color);
@@ -268,4 +271,5 @@ body {
                 .bio {grid-column: 1/3;}
 
             .data {gap: 20px;}
+            }
 }
